# backend/api/v2beta1/swagger/kfp_api_single_file.swagger.json
@@ -2414,6 +2414,10 @@
     "v2beta1Metric": {
       "type": "object",
       "properties": {
+        "run_id": {
+          "type": "string",
+          "title": "Required. Task UUID that owns this metric"
+        },
         "task_id": {
           "type": "string",
           "title": "Required. Task UUID that owns this metric"
