# backend/src/apiserver/model/run.go
@@ -224,8 +224,8 @@ type Run struct {
 	ServiceAccount string       `gorm:"column:ServiceAccount; not null;"`
 
 	// Deprecated, kept here for v1 report metrics backwards compatibility
-	// Remove once v1 apis are removed
-	Metrics []*RunMetric
+	// Remove this field from this Struct (and tag the FK in RunMetric struct, so the FK is unaffected)
+	Metrics []*RunMetric `gorm:"foreignKey:RunID;references:UUID;constraint:metrics_RunID_run_details_UUID_foreign,OnDelete:CASCADE,OnUpdate:CASCADE"` // This 'has-many' relation replaces the legacy AddForeignKey constraint previously defined in client_manager.go
 
 	// ResourceReferences are deprecated. Use Namespace, ExperimentId,
 	// RecurringRunId, PipelineSpec.PipelineId, PipelineSpec.PipelineVersionId
